fix: google sso button size and alignment

--- a/public/scss/components/whatsappOTP/LoginRegisterOTP.module.scss
+++ b/public/scss/components/whatsappOTP/LoginRegisterOTP.module.scss
@@ -173,6 +173,12 @@
     @extend .ssoGmailButton;
   }
 
+  & > div 
+  {
+    padding: 0 10px;
+    margin: 0 12px;
+  }
+
   & > span
   {
     @extend .ssoFbButton;
